# image-stitcher

./: .gitignore  README.md  create_desktop_shortcut.py  environment.yml  pyproject.toml  run_gui  run_gui.bat  run_gui.ps1  setup_cuda_windows_11.ps1  setup_gpu_ubuntu.sh  setup_gpu_ubuntu_22_04.sh  setup_ubuntu_22_04.sh  setup_windows.bat  setup_windows_11.ps1
dev/: autofix_lint.sh  ensure_uv.sh  format.sh  lint.sh  run_tests.sh  type_check.sh
hcs_viewer/: grid_viewer_gui.py  run_grid_viewer.py
image_stitcher/: __init__.py  benchmarking_util.py  flatfield_correction.py  flatfield_utils.py  image_loaders.py  parameters.py  parameters_test.py  stitcher.py  stitcher_cli.py  stitcher_gui.py  stitcher_test.py  test_z_layer_selection.py  testutil.py  z_layer_selection.py
image_stitcher/registration/: README.md  __init__.py  _constrained_refinement.py  _global_optimization.py  _stage_model.py  _tensor_backend.py  _translation_computation.py  _typing_utils.py  fixed_registration.py  manual.py  registration_viz.py  tile_registration.py
image_stitcher/registration/tests/: test_registration.py
test_fixtures/parameters_test/: parameters.json
