[project]
name = "image-stitcher"
version = "0.1.0"
description = "Stitch together 5D images into OME-zarr files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aicsimageio>=4.14.0",
    "dask-image>=2024.5.3",
    "numpy>=2.0.0",
    "ome-zarr>=0.10.3",
    "pandas>=2.2.3",
    "psutil>=6.1.1",
    "pydantic>=2.10.5",
    "pydantic-core>=2.27.2",
    "pydantic-settings>=2.7.1",
]

[project.optional-dependencies]
gui = [
    "napari-ome-zarr>=0.6.1",
    "napari[all]>=0.5.5",
    "qtpy>=2.4.2",
    "setuptools>=75.8.0",
]


[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.9.1",
]

[tool.mypy]
disallow_untyped_defs = true
strict_optional = true
implicit_optional = false
warn_return_any = true

[[tool.mypy.overrides]]
module = ["dask_image.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ome_zarr.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["zarr.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["napari.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psutil.*"]
ignore_missing_imports = true
